feat:update FastAPI server for ColQwen2.5 image and query embeddings by introducing handling of prefix/postfix length equality
